Header fixes - make the header component behave with the new app-level flex column - change z-index to play nice with changes that are coming for the /transactions page - remove .main-container rules; since each page will have different margins etc it makes more sense to do it per-route

--- a/src/components/Header/FullHeader.css
+++ b/src/components/Header/FullHeader.css
@@ -1,7 +1,3 @@
 .header.full {
     height: 160px;
 }
-
-.main-container {
-  margin-top: 160px;
-}
