--- a/src/components/Header/MiniHeader.css
+++ b/src/components/Header/MiniHeader.css
@@ -1,7 +1,7 @@
 .header.mini {
-    height: 100px;
+  height: 100px;
 }
 
-.main-container {
+/* .main-container {
   margin-top: 100px;
-}
+} */
